--- a/client/public/index.html
+++ b/client/public/index.html
@@ -17,12 +17,11 @@
     </script>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
     <meta
-      name="description"
-      content="Web site created using create-react-app"
+      name="Thru Hike Data"
+      content="Thru Hike Data | Compare data on United States thru hikes, seamlessly. The best side-by-side data on long-distance trails on the internet."
     />
-    <link rel="apple-touch-icon" href="logo192.png" />
+    <meta name="keywords" content="thru,hike,data,trail,gear,food,map,pacific,crest,long,appalachian,west,east,coast,tent,trip,planning,hiker,outdoor,info">
     <link
       href="https://fonts.googleapis.com/css?family=Roboto:400,700,900&display=swap"
       rel="stylesheet"
@@ -46,7 +45,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Thru Hike Finder</title>
+    <title>Thru Hike Data</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
