--- a/client/public/index.html
+++ b/client/public/index.html
@@ -21,7 +21,7 @@
       name="Thru Hike Data"
       content="Thru Hike Data | Compare data on United States thru hikes, seamlessly. The best side-by-side data on long-distance trails on the internet."
     />
-    <meta name="keywords" content="thru,hike,data,trail,gear,food,map,pacific,crest,long,appalachian,west,east,coast,tent,trip,planning,hiker,outdoor,info">
+    <meta name="keywords" content="thru,hike,data,trail,gear,food,map,PCT,AT,CDT,JMT,elevation,distance,length,miles,mileage,pacific,crest,long,appalachian,west,east,coast,trip,planning,hike,outdoor,info">
     <link
       href="https://fonts.googleapis.com/css?family=Roboto:400,700,900&display=swap"
       rel="stylesheet"
