--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Thru Hike Data</title>
+    <meta name="description" content="Thru Hike Data | Compare data on United States thru hikes, seamlessly. The best side-by-side data on long-distance trails on the internet.">
+    <link href="https://thruhikedata.com/" rel="canonical" />
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script
       async
@@ -15,12 +20,6 @@
 
       gtag('config', 'UA-134071211-4');
     </script>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta
-      name="Thru Hike Data"
-      content="Thru Hike Data | Compare data on United States thru hikes, seamlessly. The best side-by-side data on long-distance trails on the internet."
-    />
     <meta name="keywords" content="thru,hike,data,trail,hayduke,ozark,gear,food,map,PCT,AT,CDT,JMT,elevation,distance,length,miles,mileage,pacific,crest,long,appalachian,west,east,coast,trip,planning,hike,outdoor,info">
     <link
       href="https://fonts.googleapis.com/css?family=Roboto:400,700,900&display=swap"
@@ -45,7 +44,6 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Thru Hike Data</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
