--- a/client/public/index.html
+++ b/client/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Thru Hike Data</title>
     <meta name="description" content="Thru Hike Data | Compare data on United States thru hikes, seamlessly. The best side-by-side data on long-distance trails on the internet.">
-    <meta name="keywords" content="thru,hike,data,trail,hayduke,ozark,gear,food,map,PCT,AT,CDT,JMT,elevation,distance,length,miles,mileage,pacific,crest,long,appalachian,west,east,coast,trip,planning,hike,outdoor,info">
+    <meta name="keywords" content="top, best, hikes, thru, hike, data, trail, hayduke, ozark, gear, food, map, PCT, AT, CDT, JMT, elevation, distance, length, miles, mileage, pacific, crest, long, appalachian, west, east, coast, trip, planning, pack, tent, bears, calories, outdoor, info">
     <link  rel="canonical"  href="https://www.thruhikedata.com/"/>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script
