--- a/client/public/index.html
+++ b/client/public/index.html
@@ -21,6 +21,7 @@
 
       gtag('config', 'UA-134071211-4');
     </script>
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:600&display=swap" rel="stylesheet">
     <link
       href="https://fonts.googleapis.com/css?family=Roboto:400,700,900&display=swap"
       rel="stylesheet"
