--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Thru Hike Data | Compare data on United States thru hikes, seamlessly. The best side-by-side data on long-distance trails on the internet.">
     <meta name="keywords" content="top, best, hikes, thru, hike, data, trail, hayduke, ozark, gear, food, map, PCT, AT, CDT, JMT, elevation, distance, length, miles, mileage, pacific, crest, long, appalachian, west, east, coast, trip, planning, pack, tent, bears, calories, outdoor, info">
     <link  rel="canonical"  href="https://www.thruhikedata.com/"/>
+    <script data-ad-client="ca-pub-6067997293110015" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script
       async
