--- a/client/public/index.html
+++ b/client/public/index.html
@@ -22,6 +22,7 @@
 
       gtag('config', 'UA-134071211-4');
     </script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Montserrat:600&display=swap" rel="stylesheet">
     <link
       href="https://fonts.googleapis.com/css?family=Roboto:400,700,900&display=swap"
